@@ -1,5 +1,6 @@
 Changes file for DateTime::Incomplete
 
+- set_time_zone / set_locale test for undef args
 - strftime
 - time_zone_long_name
 - today / now / from_epoch / from_object / from_day_of_year
